<resources>
    <string name="app_name">Espresso</string>
    <string name="main_activity_title">Main Activity title!</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome back</string>
    <string name="back">Back</string>
</resources>